appId: ${APP_ID}
tags:
  - auth
  - parallel
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          clearKeychain: true
          arguments:
            isE2ETest: true
      - runFlow: ../utils/Prepare.yaml
      - assertVisible:
          id: welcome-screen
      - tapOn: '.*Get a new wallet'
      - runFlow: ../utils/MaybeSetupPin.yaml

      # Check wallet screen exists and has expected elements
      - assertVisible:
          id: wallet-screen
      - assertVisible:
          id: copy-address-button
      - extendedWaitUntil:
          visible:
            text: .*\$[\d,]+\.\d{2}.*
          timeout: 30000
