appId: ${APP_ID}
env:
  CLOUD_BACKUP_EMAIL: ${CLOUD_BACKUP_EMAIL}
  CLOUD_BACKUP_PASSWORD: ${CLOUD_BACKUP_PASSWORD}
tags:
  - backup
  - parallel
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          clearKeychain: true
          arguments:
            isE2ETest: true
      - runFlow: ../utils/Prepare.yaml
      - runFlow: ../utils/ImportWalletWithKey.yaml

      # Navigate to settings and backup section
      - retry:
          maxRetries: 3
          commands:
            - tapOn:
                id: settings-menu
            - tapOn: 'Settings'
      - tapOn:
          id: backup-section
      - tapOn:
          id: backup-now-button
      - assertVisible: '(Sign in|Choose an account)'

      - tapOn: 'Email or phone'
      - tapOn:
          id: 'identifierId'
      - inputText: ${CLOUD_BACKUP_EMAIL}
      - tapOn:
          id: 'identifierNext'
      - tapOn:
          text: 'Enter your password'
      - inputSecretText: ${CLOUD_BACKUP_PASSWORD}
      - tapOn:
          id: 'passwordNext'
      - tapOn: 'I agree'
      - tapOn: 'ACCEPT'
      - runFlow: ../utils/MaybeSetupPin.yaml
      - tapOn:
          id: password-input
      - inputText: 12345678
      - tapOn:
          id: confirm-password-input
      - inputText: 12345678
      - tapOn:
          id: backup-button
      - runFlow: ../utils/MaybeSetupPin.yaml
      - assertVisible: '.*Up to Date.*'
      - assertVisible: 'Latest Backup:.*'
      - scrollUntilVisible:
          element:
            id: cloud-backups-settings
      - tapOn:
          id: view-cloud-backups
      - assertVisible: '.*Most Recent Backup.*'
      - tapOn: ' , back'
      - tapOn:
          id: cloud-backups-settings
      - tapOn: 'Delete All Google Drive Backups'
      - tapOn: 'Confirm and Delete Backups'
      - tapOn:
          text: '1'
          repeat: 4
          delay: 1000
      - assertVisible: '(Sign in|Choose an account)'
      - tapOn:
          id: 'com.google.android.gms:id/account_display_name'
      - assertVisible: 'Not Enabled'
